@@ -1,5 +1,5 @@
 #coding: utf-8
 
-__version__ = '0.3.17'
+__version__ = '0.3.18'
 
 from .db import *
