@@ -1,3 +1,8 @@
+lorm 0.3.17 2017-10-20
+
+[FIX]   filter encoding error
+
+
 lorm 0.3.17 2017-5-12
 
 [NEW]   dynamically configured driver
